--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,8 @@ a {
   box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
